--- a/assets/index.html
+++ b/assets/index.html
@@ -5,7 +5,7 @@
     <div class="two column row">
         <div class="ui secondary menu">
             <a class="item active" data-tab="first">Création VM</a>
-            <a class="item" data-tab="second">Supression</a>
+            <a class="item" data-tab="second">Suppression</a>
         </div>
         <div class="ui bottom attached tab blurring segment active" data-tab="first">
             <div class="ui dimmer">
